--- a/.env.example
+++ b/.env.example
@@ -53,7 +53,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 TWITTER_CONSUMER_KEY=
 TWITTER_CONSUMER_SECRET=
-TWITTER_ACCESS_TOKEN=-RFCrj4bUtHM78woUeMhFb22DHDBR89
+TWITTER_ACCESS_TOKEN=
 TWITTER_ACCESS_TOKEN_SECRET=
 TWITTER_API_VERSION=2
 TWITTER_CALLBACK_URL=http://127.0.0.1:8000/auth/callback/twitter
